[gd_scene load_steps=10 format=1]

[ext_resource path="res://data/scripts/map_ui.gd" type="Script" id=1]
[ext_resource path="res://data/graphics/map_placeholder.jpg" type="Texture" id=2]
[ext_resource path="res://data/graphics/map01.png" type="Texture" id=3]
[ext_resource path="res://data/graphics/map02.png" type="Texture" id=4]
[ext_resource path="res://data/graphics/map03.png" type="Texture" id=5]
[ext_resource path="res://data/fonts/comic_bold.fnt" type="BitmapFont" id=6]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 29.8033, 30.854 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 29.0951, 32.4395 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 28.2209, 31.8639 )

[node name="Area2D" type="Area2D"]

input/pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 1 )

[node name="TextureFrame" type="TextureFrame" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1007.0
margin/bottom = 627.0
texture = ExtResource( 2 )
stretch_mode = 0

[node name="map01" type="Area2D" parent="."]

transform/pos = Vector2( 410.662, 225.152 )
transform/scale = Vector2( 1.66398, 1.09939 )
input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 2.67455 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="Sprite" type="Sprite" parent="map01"]

visibility/visible = false
transform/pos = Vector2( -0.973775, -3.96312 )
transform/scale = Vector2( 0.284043, 0.432771 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="map01"]

transform/pos = Vector2( 0, 2.67455 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="map02" type="Area2D" parent="."]

transform/pos = Vector2( 539.268, 231.469 )
transform/scale = Vector2( 1.56527, 1.2404 )
input/pickable = true
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0.592606 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="Sprite" type="Sprite" parent="map02"]

visibility/visible = false
transform/pos = Vector2( -0.0669003, -1.86436 )
transform/scale = Vector2( 0.298852, 0.36226 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="map02"]

transform/pos = Vector2( 0, 0.592606 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="map03" type="Area2D" parent="."]

transform/pos = Vector2( 670.582, 235.982 )
transform/scale = Vector2( 1.74859, 1.12759 )
input/pickable = true
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="Sprite" type="Sprite" parent="map03"]

visibility/visible = false
transform/pos = Vector2( -0.378819, 0.766159 )
transform/scale = Vector2( 0.267617, 0.401241 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="map03"]

shape = SubResource( 3 )
trigger = false
_update_shape_index = 0

[node name="label" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 14.0
custom_fonts/font = ExtResource( 6 )
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="input_event" from="map01" to="." method="_on_map01_input_event"]

[connection signal="mouse_enter" from="map01" to="." method="_on_map01_mouse_enter"]

[connection signal="mouse_exit" from="map01" to="." method="_on_map01_mouse_exit"]

[connection signal="input_event" from="map02" to="." method="_on_map02_input_event"]

[connection signal="mouse_enter" from="map02" to="." method="_on_map02_mouse_enter"]

[connection signal="mouse_exit" from="map02" to="." method="_on_map02_mouse_exit"]

[connection signal="input_event" from="map03" to="." method="_on_map03_input_event"]

[connection signal="mouse_enter" from="map03" to="." method="_on_map03_mouse_enter"]

[connection signal="mouse_exit" from="map03" to="." method="_on_map03_mouse_exit"]


